--- a/index.html
+++ b/index.html
@@ -453,6 +453,16 @@
                             <!-- Third and Fourth Images Side-by-Side -->
                             <div class="row">
                                 <div class="col s12 m6">
+                                    <img alt="Bartender Robot Close-up" src="/assets/img/bartender-exploded-3.png" class="responsive-img center-block" />
+                                </div>
+                                <div class="col s12 m6">
+                                    <img alt="Bartender Robot Dispensing" src="/assets/img/bartender-gearing-4.png" class="responsive-img center-block" />
+                                </div>
+                            </div>
+
+                            <!-- Third and Fourth Images Side-by-Side -->
+                            <div class="row">
+                                <div class="col s12 m6">
                                     <img alt="Bartender Robot Close-up" src="/assets/img/bartender-stepper-5.png" class="responsive-img center-block" />
                                 </div>
                                 <div class="col s12 m6">
@@ -467,6 +477,67 @@
                     </div>
                 </div>
 
+                <!-- Project 2: Robocon 2020 -->
+                <div class="card">
+                    <div class="card-content">
+                        <div class="row">
+                            <div class="col s12">
+                                <p>
+                                    <span class="card-title teal-text hoverline" style="text-align: left; display: block;">
+                                    Design, Fabrication and Control of Rugby Robots</span>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="role brown-text text-darken-2">Jan 2022 – May 2022</div>
+                        <ul>
+                            <li>Implemented voice, face, and ID recognition using Machine Learning for mixing and serving drinks using a robotic arm.</li>
+
+                            <!-- First Image -->
+                            <div class="row">
+                                <div class="col s12">
+                                    <img alt="Bartender Robot in Action" src="/assets/img/bartender-full-1.png" class="responsive-img" style="width: 80%; max-width: 600px;" />
+                                </div>
+                            </div>
+
+                            <!-- Second Image with Label -->
+                            <div class="row">
+                                <div class="col s12 m6">
+                                    <img alt="Bartender Robot Components" src="/assets/img/bartender-cad-2.png" class="responsive-img center-block" />
+                                </div>
+                                <div class="col s12 m6">
+                                    <div class="card-panel teal lighten-4">
+                                        <p class="black-text"><b>Image Description:</b> A detailed view of the bartender robot’s gripper mechanism and sensor integration.</p>
+                                        <p class="black-text"><b></b> Another point see where this goes.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Third and Fourth Images Side-by-Side -->
+                            <div class="row">
+                                <div class="col s12 m6">
+                                    <img alt="Bartender Robot Close-up" src="/assets/img/bartender-exploded-3.png" class="responsive-img center-block" />
+                                </div>
+                                <div class="col s12 m6">
+                                    <img alt="Bartender Robot Dispensing" src="/assets/img/bartender-gearing-4.png" class="responsive-img center-block" />
+                                </div>
+                            </div>
+
+                            <!-- Third and Fourth Images Side-by-Side -->
+                            <div class="row">
+                                <div class="col s12 m6">
+                                    <img alt="Bartender Robot Close-up" src="/assets/img/bartender-stepper-5.png" class="responsive-img center-block" />
+                                </div>
+                                <div class="col s12 m6">
+                                    <img alt="Bartender Robot Dispensing" src="/assets/img/bartender-image-6.png" class="responsive-img center-block" />
+                                </div>
+                            </div>
+
+                            <li>Integrated tactile sensors for gripping, ultrasound sensors, and developed algorithms for a 5-DOF series manipulator.</li>
+                            <li>Used ROS, Arduino, Raspberry Pi, and Nvidia Jetson to control the robotic system.</li>
+                            <li><b>Tools:</b> ROS, OpenCV, Machine Learning, Arduino, Raspberry Pi, Nvidia Jetson</li>
+                        </ul>
+                    </div>
+                </div>
 
                 <!-- Project 2: Autonomous Vehicle Control -->
                 <!--<div class="card">
