--- a/index.html
+++ b/index.html
@@ -430,17 +430,11 @@
                         <ul>
                             <li>Implemented voice, face, and ID recognition using Machine Learning for mixing and serving drinks using a robotic arm.</li>
 
-                            <!-- First Image -->
-                            <div class="row">
-                                <div class="col s12">
-                                    <img alt="Bartender Robot in Action" src="/assets/img/bartender-full-1.png" class="responsive-img" style="width: 80%; max-width: 600px;" />
-                                </div>
-                            </div>
 
-                            <!-- Second Image with Label -->
+                            <!-- First Image with Label -->
                             <div class="row">
                                 <div class="col s12 m6">
-                                    <img alt="Bartender Robot Components" src="/assets/img/bartender-cad-2.png" class="responsive-img center-block" />
+                                    <img alt="Bartender Robot Components" src="/assets/img/robocon-pass-bot-1.png" class="responsive-img center-block" />
                                 </div>
                                 <div class="col s12 m6">
                                     <div class="card-panel teal lighten-4">
@@ -450,13 +444,20 @@
                                 </div>
                             </div>
 
-                            <!-- Third and Fourth Images Side-by-Side -->
+                            <!-- Gripping and throwing Images Side-by-Side -->
                             <div class="row">
                                 <div class="col s12 m6">
-                                    <img alt="Bartender Robot Close-up" src="/assets/img/bartender-exploded-3.png" class="responsive-img center-block" />
+                                    <img alt="Bartender Robot Close-up" src="/assets/img/robocon-pass-grip-4.png" class="responsive-img center-block" />
                                 </div>
                                 <div class="col s12 m6">
-                                    <img alt="Bartender Robot Dispensing" src="/assets/img/bartender-gearing-4.png" class="responsive-img center-block" />
+                                    <img alt="Bartender Robot Dispensing" src="/assets/img/robocon-pass-throw-5.png" class="responsive-img center-block" />
+                                </div>
+                            </div>
+
+                            <!-- Alignment Image -->
+                            <div class="row">
+                                <div class="col s12">
+                                    <img alt="Bartender Robot in Action" src="/assets/img/robocon-alignment-7.png" class="responsive-img" style="width: 95%; max-width: 900px;" />
                                 </div>
                             </div>
 
