--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                             <li>Implemented voice, face, and ID recognition using Machine Learning for mixing and serving drinks using a robotic arm.</li>
 
 
-                            <!-- First Image with Label -->
+                            <!-- Pass bot Image with Label -->
                             <div class="row">
                                 <div class="col s12 m6">
                                     <img alt="Bartender Robot Components" src="/assets/img/robocon-pass-bot-1.png" class="responsive-img center-block" />
@@ -457,17 +457,33 @@
                             <!-- Alignment Image -->
                             <div class="row">
                                 <div class="col s12">
-                                    <img alt="Bartender Robot in Action" src="/assets/img/robocon-alignment-7.png" class="responsive-img" style="width: 95%; max-width: 900px;" />
+                                    <img alt="Bartender Robot in Action" src="/assets/img/robocon-alignment-7.png" class="responsive-img center-block" style="width: 95%; max-width: 900px;" />
                                 </div>
                             </div>
 
-                            <!-- Third and Fourth Images Side-by-Side -->
+                            <!-- Kicking Image with Label -->
                             <div class="row">
                                 <div class="col s12 m6">
-                                    <img alt="Bartender Robot Close-up" src="/assets/img/bartender-stepper-5.png" class="responsive-img center-block" />
+                                    <img alt="Bartender Robot Components" src="/assets/img/robocon-pass-kicking-2.png" class="responsive-img center-block" />
                                 </div>
                                 <div class="col s12 m6">
-                                    <img alt="Bartender Robot Dispensing" src="/assets/img/bartender-image-6.png" class="responsive-img center-block" />
+                                    <div class="card-panel teal lighten-4">
+                                        <p class="black-text"><b>Image Description:</b> A detailed view of the bartender robot’s gripper mechanism and sensor integration.</p>
+                                        <p class="black-text"><b></b> Another point see where this goes.</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- Try robot Image with Label -->
+                            <div class="row">
+                                <div class="col s12 m6">
+                                    <img alt="Bartender Robot Components" src="/assets/img/robocon-try-bot-6.png" class="responsive-img center-block" />
+                                </div>
+                                <div class="col s12 m6">
+                                    <div class="card-panel teal lighten-4">
+                                        <p class="black-text"><b>Image Description:</b> A detailed view of the bartender robot’s gripper mechanism and sensor integration.</p>
+                                        <p class="black-text"><b></b> Another point see where this goes.</p>
+                                    </div>
                                 </div>
                             </div>
 
