--- a/index.html
+++ b/index.html
@@ -416,30 +416,39 @@
             <h3 class="page-title white-text teal">Projects</h3>
             <div class="container">
 
-                <!-- Project 1: Autonomous Bartender Robot -->
+                <!-- Project 1: Design, Fabrication and Control of Rugby Robots -->
                 <div class="card">
                     <div class="card-content">
                         <div class="row">
                             <div class="col s12">
                                 <p>
-                                    <span class="card-title teal-text hoverline" style="text-align: left; display: block;">Autonomous Bartender Robot</span>
+                                    <span class="card-title teal-text hoverline" style="text-align: left; display: block;">
+                                    Design, Fabrication and Control of Rugby Robots</span>
                                 </p>
                             </div>
                         </div>
-                        <div class="role brown-text text-darken-2">Jan 2022 – May 2022</div>
+                        <div class="role brown-text text-darken-2">Oct 2019 – Apr 2020</div>
                         <ul>
-                            <li>Implemented voice, face, and ID recognition using Machine Learning for mixing and serving drinks using a robotic arm.</li>
+                            <li>Engineered a pair of robots (with ball picking, throwing, receiving, and kicking systems) for rugby competition.</li>
 
 
                             <!-- Pass bot Image with Label -->
                             <div class="row">
                                 <div class="col s12 m6">
-                                    <img alt="Bartender Robot Components" src="/assets/img/robocon-pass-bot-1.png" class="responsive-img center-block" />
+                                    <img alt="Pass bot" src="/assets/img/robocon-pass-bot-1.png" class="responsive-img center-block" />
                                 </div>
                                 <div class="col s12 m6">
                                     <div class="card-panel teal lighten-4">
-                                        <p class="black-text"><b>Image Description:</b> A detailed view of the bartender robot’s gripper mechanism and sensor integration.</p>
-                                        <p class="black-text"><b></b> Another point see where this goes.</p>
+                                        <p class="black-text"><b></b>1. DC Planetary geared motor - Extending spring</p>
+                                        <p class="black-text"><b></b>2. 50mm Stroke length piston - Gripping of ball</p>
+                                        <p class="black-text"><b></b>3. Johnson motor - Reloading process</p>
+                                        <p class="black-text"><b></b>4. 250mm Stroke length piston - Throwing of ball</p>
+                                        <p class="black-text"><b></b>5. DC Planetary geared motor - Locomotion</p>
+                                        <p class="black-text"><b></b>6. 50mm Stroke length piston - Centering mechanism</p>
+                                        <p class="black-text"><b></b>7. Rhino servo motor - Rotating gripper in loading mechanism</p>
+                                        <p class="black-text"><b></b>8. Servo motor - Gripper in loading mechanism</p>
+                                        <p class="black-text"><b></b>9. Nema23 stepper motor - Rotating ball container</p>
+                                        <p class="black-text"><b></b>10. 50mm Stroke length piston - Locking in kick process</p>
                                     </div>
                                 </div>
                             </div>
@@ -494,14 +503,15 @@
                     </div>
                 </div>
 
-                <!-- Project 2: Robocon 2020 -->
+                <!-- Project 2: Autonomous Bartender Robot -->
                 <div class="card">
                     <div class="card-content">
                         <div class="row">
                             <div class="col s12">
                                 <p>
                                     <span class="card-title teal-text hoverline" style="text-align: left; display: block;">
-                                    Design, Fabrication and Control of Rugby Robots</span>
+                                        Autonomous Bartender Robot
+                                    </span>
                                 </p>
                             </div>
                         </div>
