--- a/index.html
+++ b/index.html
@@ -477,8 +477,15 @@
                                 </div>
                                 <div class="col s12 m6">
                                     <div class="card-panel teal lighten-4">
-                                        <p class="black-text"><b>Image Description:</b> A detailed view of the bartender robot’s gripper mechanism and sensor integration.</p>
-                                        <p class="black-text"><b></b> Another point see where this goes.</p>
+                                        <p class="black-text"><b></b>1. Springs connected between plates.</p>
+                                        <p class="black-text"><b></b>2. Ball Holder.</p>
+                                        <p class="black-text"><b></b>3. Loading mechanism.</p>
+                                        <p class="black-text"><b></b>4. Tee-centring mechanism.</p>
+                                        <p class="black-text"><b></b>5. Lock.</p>
+                                        <p class="black-text"><b></b>6. Lead screw with nut.</p>
+                                        <p class="black-text"><b></b>7. Kicking arm.</p>
+                                        <p class="black-text"><b></b>8. Metal wire</p>
+                                        <p class="black-text"><b></b>9. Reloading pulley</p>
                                     </div>
                                 </div>
                             </div>
@@ -490,8 +497,13 @@
                                 </div>
                                 <div class="col s12 m6">
                                     <div class="card-panel teal lighten-4">
-                                        <p class="black-text"><b>Image Description:</b> A detailed view of the bartender robot’s gripper mechanism and sensor integration.</p>
-                                        <p class="black-text"><b></b> Another point see where this goes.</p>
+                                        <p class="black-text"><b></b>1. Cloth (to direct the ball into the robot)</p>
+                                        <p class="black-text"><b></b>2. Gate (to make the ball roll into try spot)</p>
+                                        <p class="black-text"><b></b>3. Rollers (to make the ball roll into try spot)</p>
+                                        <p class="black-text"><b></b>4. Pneumatic piston (to actuate the gate)</p>
+                                        <p class="black-text"><b></b>5. Line sensor (to align with the try spot)</p>
+                                        <p class="black-text"><b></b>6. Planetary geared DC motor (mobility of the robot)</p>
+                                        <p class="black-text"><b></b>7. Omni wheels (the locomotion of the robot)</p>
                                     </div>
                                 </div>
                             </div>
