--- a/index.html
+++ b/index.html
@@ -723,51 +723,52 @@
         <section id="skills" class="section scrollspy">
             <h3 class="page-title white-text teal">Skills</h3>
             <div class="container">
-                <!-- Languages and Databases -->
+
                 <div class="card">
                     <div class="card-content">
-                        <h4 class="brown-text light">Languages and Databases</h4>
+                        <h4 class="brown-text light">Computer Aided Design & Manufacturing</h4>
                         <div class="row text-center">
                             <div class="col s4 m2">
-                                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
+                                <img alt="" src="/assets/img/solidworks-logo.png" class="responsive-img" />Solidworks
                             </div>
                             <div class="col s4 m2">
-                                <img alt="" src="/assets/img/html5-300x300.jpg" class="responsive-img" />HTML5
+                                <img alt="" src="/assets/img/onshape-logo.jfif" class="responsive-img" />OnShape
                             </div>
                             <div class="col s4 m2">
-                                <img alt="" src="/assets/img/css3-300x300.jpg" class="responsive-img" />CSS3
+                                <img alt="" src="/assets/img/cnc-logo.png" class="responsive-img" />CNC machining
                             </div>
                             <div class="col s4 m2">
-                                <img alt="" src="/assets/img/mysql-logo-1-300x300.jpg" class="responsive-img" />MySQL
+                                <img alt="" src="/assets/img/3dprinting-logo.png" class="responsive-img" />3D Printing
                             </div>
                             <div class="col s4 m2">
-                                <img alt="" src="/assets/img/postgresql-logo.png" class="responsive-img" />PostgreSQL
+                                <img alt="" src="/assets/img/waterlet-logo.jfif" class="responsive-img" />Waterjet machining
                             </div>
                             <div class="col s4 m2">
-                                <img alt="" src="/assets/img/shell-logo-1-300x300.jpg" class="responsive-img" />Shell Scripting
+                                <img alt="" src="/assets/img/festo-logo.png" class="responsive-img" />Pneumatics
                             </div>
                         </div>
                     </div>
                 </div>
 
+                <!-- Languages and Databases -->
                 <div class="card">
                     <div class="card-content">
-                        <h4 class="brown-text light">Libraries</h4>
+                        <h4 class="brown-text light">Programming Languages and Software</h4>
                         <div class="row text-center">
                             <div class="col s4 m2">
-                                <img alt="" src="/assets/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
+                                <img alt="" src="/assets/img/python-logo-1-300x300.jpg" class="responsive-img" />Python
                             </div>
                             <div class="col s4 m2">
-                                <img alt="" src="/assets/img/pandas-logo-2-500x500.jpg" class="responsive-img" />Pandas
+                                <img alt="" src="/assets/img/C++-logo.png" class="responsive-img" />C++
                             </div>
                             <div class="col s4 m2">
-                                <img alt="" src="/assets/img/opencv-logo-1-500x500.jpg" class="responsive-img" />OpenCV
+                                <img alt="" src="/assets/img/git-logo.png" class="responsive-img" />Git
                             </div>
                             <div class="col s4 m2">
-                                <img alt="" src="/assets/img/sk-learn-logo-1-500x500.jpg" class="responsive-img" />scikit-learn
+                                <img alt="" src="/assets/img/matlab-logo.jfif" class="responsive-img" />MATLAB
                             </div>
                             <div class="col s4 m2">
-                                <img alt="" src="/assets/img/matplotlib-logo-1-500x500.jpg" class="responsive-img" />matplotlib
+                                <img alt="" src="/assets/img/ros-logo.png" class="responsive-img" />ROS
                             </div>
                         </div>
                     </div>
@@ -822,37 +823,37 @@
 
                 <!-- certifications -->
                 <!-- <div class="card">
-              <div class="card-content">
-                <h4 class="brown-text light">Certificates</h4>
-                <div class="row text-left">
-                  <div class="container">
-                    <div class="row">
-                      <div class="col s12 m6 l6">
-                        <div class="card">
-                          <div class="card-image">
-                            <img src="/assets/img/mooc-machine-learning-coursera-800x500.jpg">
-                          </div>
-                          <div class="card-content">
-                            <span class="card-title teal-text">Machine Learning (Stanford)</span>
-                          </div>
-                        </div>
-                      </div>
-
-                      <div class="col s12 m6 l6">
-                        <div class="card">
-                          <div class="card-image">
-                            <img src="/assets/img/mooc-algorithms-stanford-2-800x500.jpg">
-                          </div>
-                          <div class="card-content">
-                            <span class="card-title teal-text">Algorithms (Stanford)</span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+      <div class="card-content">
+        <h4 class="brown-text light">Certificates</h4>
+        <div class="row text-left">
+          <div class="container">
+            <div class="row">
+              <div class="col s12 m6 l6">
+                <div class="card">
+                  <div class="card-image">
+                    <img src="/assets/img/mooc-machine-learning-coursera-800x500.jpg">
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title teal-text">Machine Learning (Stanford)</span>
                   </div>
                 </div>
               </div>
-            </div> -->
+
+              <div class="col s12 m6 l6">
+                <div class="card">
+                  <div class="card-image">
+                    <img src="/assets/img/mooc-algorithms-stanford-2-800x500.jpg">
+                  </div>
+                  <div class="card-content">
+                    <span class="card-title teal-text">Algorithms (Stanford)</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div> -->
 
             </div>
         </section>
