--- a/index.html
+++ b/index.html
@@ -777,25 +777,13 @@
                 <!-- Frameworks -->
                 <div class="card">
                     <div class="card-content">
-                        <h4 class="brown-text light">Frameworks</h4>
+                        <h4 class="brown-text light">Microcontrollers</h4>
                         <div class="row text-center">
                             <div class="col s4 m2">
-                                <img alt="" src="/assets/img/django-logo.webp" class="responsive-img" />Django
+                                <img alt="" src="/assets/img/arduino-logo.png" class="responsive-img" />Arduino
                             </div>
                             <div class="col s4 m2">
-                                <img alt="" src="/assets/img/flask-logo.png" class="responsive-img" />Flask
-                            </div>
-                            <div class="col s4 m2">
-                                <img alt="" src="/assets/img/bootstrap.png" class="responsive-img" />Bootstrap
-                            </div>
-                            <div class="col s4 m2">
-                                <img alt="" src="/assets/img/keras-logo.png" class="responsive-img" />Keras
-                            </div>
-                            <div class="col s4 m2">
-                                <img alt="" src="/assets/img/tensorflow-logo-1.png" class="responsive-img" />TensorFlow
-                            </div>
-                            <div class="col s4 m2">
-                                <img alt="" src="/assets/img/pytorch-logo.png" class="responsive-img" />PyTorch
+                                <img alt="" src="/assets/img/raspberry-pi-logo.png" class="responsive-img" />Raspberry Pi
                             </div>
                         </div>
                     </div>
